@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-01-16:
+
+- Fixed a parsing bug in array subscripts containing '=' in combination with
+  a declaration command (such as 'typeset' or 'export'). For instance,
+  'typeset -A arr; typeset -i arr[foo=bar]=123' now works correctly.
+
 2024-01-15:
 
 - Fixed a bug, introduced in ksh93q+ 2005-05-22, that stopped an append
